--- a/Stage6/Projeto01/package.json
+++ b/Stage6/Projeto01/package.json
@@ -1,7 +1,6 @@
 {
   "name": "projeto01",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "lite-server",
@@ -12,5 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "lite-server": "^2.6.1"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
