--- a/Stage8/Projeto01/package.json
+++ b/Stage8/Projeto01/package.json
@@ -1,15 +1,18 @@
 {
   "name": "projeto01",
   "version": "1.0.0",
-  "description": "",
+  "description": "API desenvolvida com node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vinicios Limer",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "nodemon": "^3.0.1"
   }
 }
