Criando SQL da aplicação

--- a/Stage8/Projeto01/package.json
+++ b/Stage8/Projeto01/package.json
@@ -11,8 +11,11 @@
   "author": "Vinicios Limer",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sqlite": "^5.0.1",
+    "sqlite3": "^5.1.6"
   }
 }
